fix alignment

--- a/styles/inside.css
+++ b/styles/inside.css
@@ -37,8 +37,8 @@ nav {
 }
 .about-img {
 display: flex;
- justify-content: space-around;
-  padding: 0;
+ justify-content: flex-end;
+  padding-right: 1em;
   flex: 1;
 }
 img {
